<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_oficinas"
    tools:context=".OficinasActivity">

    <LinearLayout
        android:id="@+id/contenedorOficinas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/espacio_control"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="@dimen/espacio_control"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/espacio_control"
        android:layout_marginTop="@dimen/espacio_control"
        android:contentDescription="@string/icono_tienda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo_foreground" />

    <TextView
        android:id="@+id/textView9"
        style="@style/super_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espacio_control"
        android:layout_marginEnd="@dimen/espacio_control"
        android:text="@string/sedes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/espacio_control"
        android:layout_marginBottom="@dimen/espacio_control"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbPuno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puno" />

        <RadioButton
            android:id="@+id/rbIca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ica" />

        <RadioButton
            android:id="@+id/rbCusco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cusco" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>